# nordic-wifi-memfault

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  overlay-app-https-req.conf  overlay-app-memfault-project-info.conf.template  overlay-app-memfault-project-key.conf.template  overlay-project-key.conf  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp.yml  pm_static_nrf7002dk_nrf5340_cpuapp.yml  prj.conf  sysbuild.conf  west.yml
.github/workflows/: build.yml  release.yml  validation.yml
boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
docs/: memory-optimization-report.md
docs/dev-specs/: 0-overview.md  1-architecture.md  2-dts-partition.md  3-memopt.md  5-network-module.md  app-https-client-module.md  app-memfault-module.md  app-mqtt-client-module.md  app-wifi-prov-ble-module.md  architecture.md  button-module.md  flash-memory-layout.md  heap-monitor-module.md  implementation-sync-checklist.md  memonitor-module.md  memory-optimization-report.md  network-module.md  ntp-module.md  overview.md  partition-layout.md  ux.md
docs/pm-prd/: PRD.md
docs/qa-test/: QA-2026-05-14-14-23.md  QA-2026-05-14-19-45.md  QA-2026-05-15-10-37.md  README.md  VERIFICATION-2026-06-05-10-15.md
pm/: PRD.md  QA.md
pm/openspec/: PROPOSAL_TEMPLATE.md  config.yaml
pm/openspec/specs/: architecture.md  button-module.md  memfault-integration.md  wifi-module.md
src/: ble_provisioning.c  https_client.c  main.c  mqtt_client.c  pm_config.h
src/modules/: messages.h
src/modules/app_https_client/: CMakeLists.txt  Kconfig.app_https_client  Kconfig.defaults  app_https_client.c  app_https_client.h
src/modules/app_memfault/: CMakeLists.txt  Kconfig.app_memfault  Kconfig.defaults  Kconfig.memfault
src/modules/app_memfault/cdr/: app_memfault_nrf70_fw_stats_cdr.c  app_memfault_nrf70_fw_stats_cdr.h  nrf70_fw_stats_cdr.c  nrf70_fw_stats_cdr.h
src/modules/app_memfault/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
src/modules/app_memfault/core/: app_memfault_core.c  app_memfault_core.h  app_memfault_log_state_restore.c  app_memfault_log_state_restore.h  app_memfault_platform_time.c  memfault_core.c  memfault_core.h  memfault_flash_coredump_storage.c  memfault_log_state_restore.c  memfault_log_state_restore.h
src/modules/app_memfault/metrics/: app_memfault_memonitor_metrics.c  app_memfault_stack_metrics.c  app_memfault_stack_metrics.h  app_memfault_wifi_metrics.c  app_memfault_wifi_metrics.h  stack_metrics.c  stack_metrics.h  wifi_metrics.c  wifi_metrics.h
src/modules/app_memfault/ota/: app_memfault_ota_triggers.c  app_memfault_ota_triggers.h  ota_triggers.c  ota_triggers.h
src/modules/app_mqtt_client/: CMakeLists.txt  Kconfig.app_mqtt_client  Kconfig.defaults  app_mqtt_client.c  app_mqtt_client.h
src/modules/button/: Kconfig.button  button.c  button.h
src/modules/heap_monitor/: CMakeLists.txt  Kconfig.defaults  Kconfig.heap_monitor  heap_monitor.c
src/modules/memfault/: Kconfig.memfault
src/modules/memfault/core/: memfault_core.c
src/modules/network/: CMakeLists.txt  Kconfig  Kconfig.defaults  net_event_app.c  net_event_mgmt.c  wifi_utils.c  wifi_utils.h
src/modules/ntp/: CMakeLists.txt  Kconfig.defaults  Kconfig.ntp  ntp_sync.c  ntp_sync.h
src/modules/ux/: Kconfig  ux.c
src/modules/wifi_prov_over_ble/: CMakeLists.txt  Kconfig.defaults  Kconfig.wifi_prov_over_ble  wifi_prov_over_ble.c  wifi_prov_over_ble.conf.template  wifi_prov_over_ble.h
sysbuild/hci_ipc/: prj.conf
sysbuild/hci_ipc/boards/: nrf7002dk_nrf5340_cpunet.conf
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
